--- a/EvPresentaciones/templates/EvPresentaciones/Index.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Index.html
@@ -8,12 +8,12 @@
                 {% csrf_token %}
                 <table class="table">
                     <tr>
-                        <td><label for="id_username">Username</label></td>
+                        <td><label for="id_username">Usuario</label></td>
                         <td><input id="id_username" name="username" 
                                    type="text" class="form-control"></td>
                     </tr>
                     <tr>
-                        <td><label for="id_password">Password</label></td>
+                        <td><label for="id_password">Contraseña</label></td>
                         <td><input id="id_password" name="password" 
                                    type="password" class="form-control"></td>
                     </tr>
