--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
@@ -49,12 +49,15 @@
         </h3>
     </div>
     <div class="w3-bar-block">
-        <a href="{% url 'HomeAdmin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+        <a href={% url 'landing_page_admin' %} onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Home</a>
         <a href="{% url 'cursos_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
-        <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
+        <a href="{% url 'evaluadores_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
         <a href="{% url 'rubricas_admin' %}" onclick="w3_close()"
            class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
-        <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
+        <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
         <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     </div>
 </nav>
