--- a/EvPresentaciones/templates/EvPresentaciones/Index.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Index.html
@@ -1,37 +1,33 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <div id="content-container" class="container p-none">
-        <div class="lgn-container col-lg-8">
-            <form id="login-form" method="POST" 
-                  action="{% url 'LandingPage' %}">
-                {% csrf_token %}
-                <table class="table">
-                    <tr>
-                        <td><label for="id_username">Usuario</label></td>
-                        <td><input id="id_username" name="username" 
-                                   type="text" class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="id_password">Contraseña</label></td>
-                        <td><input id="id_password" name="password" 
-                                   type="password" class="form-control"></td>
-                    </tr>
-                </table>
-                {% if form.errors %}
-                    <p class=" label label-danger">
-                        Your username and password didn't match. 
-                        Please try again.
-                    </p>
-                {% endif %}
+<div id="content-container" class="container p-none">
+    <div class="lgn-container col-lg-8">
+        <form id="login-form" method="POST" action="{% url 'LandingPage' %}">
+            {% csrf_token %}
+            <table class="table">
+                <tr>
+                    <td><label for="id_username">Usuario</label></td>
+                    <td><input id="id_username" name="username" type="text" class="form-control"></td>
+                </tr>
+                <tr>
+                    <td><label for="id_password">Contraseña</label></td>
+                    <td><input id="id_password" name="password" type="password" class="form-control"></td>
+                </tr>
+            </table>
+            {% if form.errors %}
+            <p class=" label label-danger">
+                Your username and password didn't match.
+                Please try again.
+            </p>
+            {% endif %}
 
-                <input type="submit" value="Login" 
-                       class="btn btn-primary pull-right" />
-                <input type="hidden" name="next" value="{{ next }}" />
-            </form>
+            <input type="submit" value="Login" class="btn btn-primary pull-right" />
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
         {% if value %}
-            <p> Correo o contraseña incorrecta.</p>
+        <p> Correo o contraseña incorrecta.</p>
         {% endif %}
-        </div>
     </div>
+</div>
 {% endblock content %}
