--- a/EvPresentaciones/templates/EvPresentaciones/Summary_student/auth_summary.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Summary_student/auth_summary.html
@@ -7,16 +7,36 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size:16px;}
-.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
-.w3-half img:hover{opacity:1}
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        font-family: "Poppins", sans-serif
+    }
+
+    body {
+        font-size: 16px;
+    }
+
+    .w3-half img {
+        margin-bottom: -6px;
+        margin-top: 16px;
+        opacity: 0.8;
+        cursor: pointer
+    }
+
+    .w3-half img:hover {
+        opacity: 1
+    }
 </style>
+
 <body>
 
     <!-- Access form -->
     <div class="w3-container w3-red w3-center" style="margin-top:100px">
-    <h2>Acceso a tu Resumen</h2>
+        <h2>Acceso a tu Resumen</h2>
     </div>
     <form class="w3-container w3-center">
         <!-- Password field -->
@@ -25,4 +45,5 @@ body {font-size:16px;}
     </form>
 
 </body>
+
 </html>
