--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
@@ -1,151 +1,227 @@
 <<!DOCTYPE html>
-    <html lang="es">
-    <title>Plataforma de evaluación-Evaluaciones</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <style>
-        body,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5 {
-            font-family: "Poppins", sans-serif
-        }
+<html lang="es">
+<title>Plataforma de evaluación-Evaluaciones</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<style>
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        font-family: "Poppins", sans-serif
+    }
 
-        body {
-            font-size: 16px;
-        }
+    body {
+        font-size: 16px;
+    }
 
-        .w3-half img {
-            margin-bottom: -6px;
-            margin-top: 16px;
-            opacity: 0.8;
-            cursor: pointer
-        }
+    .w3-half img {
+        margin-bottom: -6px;
+        margin-top: 16px;
+        opacity: 0.8;
+        cursor: pointer
+    }
 
-        .w3-half img:hover {
-            opacity: 1
-        }
-    </style>
+    .w3-half img:hover {
+        opacity: 1
+    }
+</style>
 
-    <body>
+<body>
 
-        <!-- Sidebar/menu -->
-        <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-            style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-            <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
-                style="width:100%;font-size:22px">Close Menu</a>
-            <!--Profile image -->
-            <div class="w3-container">
-                <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle"
-                        style="height:200px;width:200px" alt="Avatar"></p>
-                <h3 class="w3-padding-64">
-                    <center><b>Usuario</b></center>
-                </h3>
-            </div>
-            <div class="w3-bar-block">
-                <a href={% url 'landing_page_admin' %} onclick="w3_close()"
-                    class="w3-bar-item w3-button w3-hover-white">Home</a>
-                <a href="{% url 'cursos_admin' %}" onclick="w3_close()"
-                    class="w3-bar-item w3-button w3-hover-white">Cursos</a>
-                <a href="{% url 'evaluadores_admin' %}" onclick="w3_close()"
-                    class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
-                <a href="{% url 'rubricas_admin' %}" onclick="w3_close()"
-                    class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
-                <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()"
-                    class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
-                <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-            </div>
-        </nav>
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
+     style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
+       style="width:100%;font-size:22px">Close Menu</a>
+    <!--Profile image -->
+    <div class="w3-container">
+        <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle"
+                                  style="height:200px;width:200px" alt="Avatar"></p>
+        <h3 class="w3-padding-64">
+            <center><b>Usuario</b></center>
+        </h3>
+    </div>
+    <div class="w3-bar-block">
+        <a href={% url 'landing_page_admin' %} onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Home</a>
+        <a href="{% url 'cursos_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Cursos</a>
+        <a href="{% url 'evaluadores_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
+        <a href="{% url 'rubricas_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
+        <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
+        <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    </div>
+</nav>
 
-        <!-- Top menu on small screens -->
-        <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-            <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-            <span>Usuario</span>
-        </header>
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+    <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+    <span>Usuario</span>
+</header>
 
-        <!-- Overlay effect when opening sidebar on small screens -->
-        <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
-            id="myOverlay"></div>
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
+     id="myOverlay"></div>
 
-        <!-- !PAGE CONTENT! -->
-        <div class="w3-main" style="margin-left:340px;margin-right:40px" <!-- Portada -->
-            <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-                <h1 class="w3-xxxlarge w3-text-red"><b>Evaluaciones</b></h1>
-                <hr style="width:50px;border:5px solid red" class="w3-round">
-            </div>
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:340px;margin-right:40px" <!-- Portada -->
+<div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>Evaluaciones</b></h1>
+    <hr style="width:50px;border:5px solid red" class="w3-round">
+</div>
 
-            <div class="w3-container">
-                <button class="w3-button w3-large w3-red w3-right w3-round">Agregar nueva evaluación</button>
-                <br>
-            </div>
+<!--Agregar nueva evaluacion-->
 
+<div class="w3-container">
+    <button onclick="document.getElementById('agregar').style.display='block'"
+            class="w3-button w3-large w3-red w3-right w3-round">Agregar nueva evaluación
+    </button>
+    <br>
+</div>
 
-            <!--Seccion rubricas-->
+<!--Menu desplegable que aparece al agregar nueva evaluacion-->
+<div id="agregar" class="w3-modal">
+    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+        <div class="w3-center"><br>
+            <span onclick="document.getElementById('agregar').style.display='none'"
+                  class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
+            <form id="form" method="POST" class="w3-container"
+                  action="{% url 'agregar_evaluaciones' %}">
+                {% csrf_token %}
 
+                <div class="w3-section">
 
+                    <label><b>Fecha de Inicio</b></label>
+                    <input class="w3-input w3-border w3-margin-bottom" type="date"
+                           placeholder="Fecha de inicio" name="inicio" required>
 
+                    <label><b>Fecha de Termino</b></label>
+                    <input class="w3-input w3-border" type="date" placeholder="Fecha Termino"
+                           name="termino" required>
 
-            {% for o in pareja %}
-
-            <button onclick="myFunction({{ o.evaluacion.id }})" class="w3-btn w3-red w3-block w3-margin"
-                style="width: 75%">
-                <h3>
-                    Evaluación {{ o.evaluacion.id }}</h3>
-            </button>
-
-            <div id={{ o.evaluacion.id }} class="w3-hide w3-container w3-pale-red w3-padding-large w3-margin"
-                style="width: 75%">
-
-
-
-                <p>
-                    <li>Curso: {{ o.curso.nombre }}</li>
-                    <li>Fecha inicio: {{ o.evaluacion.fechaInicio }}</li>
-                    <li>Fecha término: {{ o.evaluacion.fechaTermino }}</li>
-                    <li>Estado: {{ o.evaluacion.estado }}</li>
-                    <li>Tiempo esperado presentación: {{ o.evaluacion.duracion }}</li>
-                    <form action="{% url 'ver_select' o.evaluacion.id %}">
-                        <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Rúbrica
-                            asociada</button>
-                    </form>
-                    <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Exportar
-                        puntajes</button><br>
-                </p>
-
-                <button class="w3-button w3-large w3-red w3-round">Ver</button>
-                <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
-                <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
+                    <label><b>Estado</b></label>
+                    <select class="w3-input w3-border" name="estado" required>
+                        <option value="activa">Activa</option>
+                        <option value="inactiva">Inactiva</option>
+                    </select>
 
 
+                    <label><b>Curso</b></label>
+                    <select class="w3-input w3-border" name="curso" required>
+                        {% for c in cursos %}
+                            <option value={{ c.id }}>{{ c.nombre }}</option>
+                        {% endfor %}
+                    </select>
 
-            </div>
+                    <label><b>Rúbrica</b></label>
+                    <select class="w3-input w3-border" name="rubricas" required>
+                        {% for r in rubricas %}
+                            <option value={{ r.nombre }}>{{ r.nombre }}</option>
+                        {% endfor %}
+                    </select>
+                    <button class="w3-button w3-block w3-red w3-section w3-padding"
+                            type="submit">Agregar
+                    </button>
 
+                </div>
 
-            {% endfor %}
-
-
-
-
-
-
+            </form>
         </div>
-        <script>
-            function myFunction(id) {
-                var x = document.getElementById(id);
-                if (x.className.indexOf("w3-show") == -1) {
-                    x.className += " w3-show";
-                } else {
-                    x.className = x.className.replace(" w3-show", "");
-                }
-            }
-        </script>
+    </div>
+    <!--cierre de cajas de cursos-->
+</div>
 
-    </body>
 
-    </html>
+<!--Seccion rubricas-->
+
+{% for o in pareja %}
+
+    <button onclick="myFunction({{ o.evaluacion.id }})" class="w3-btn w3-red w3-block w3-margin"
+            style="width: 75%">
+        <h3>
+            Evaluación {{ o.evaluacion.id }}</h3>
+    </button>
+
+    <div id={{ o.evaluacion.id }} class="w3-hide w3-container w3-pale-red w3-padding-large w3-margin"
+    style="width: 75%">
+
+
+
+    <p>
+    <li>Curso: {{ o.curso.nombre }}</li>
+    <li>Fecha inicio: {{ o.evaluacion.fechaInicio }}</li>
+    <li>Fecha término: {{ o.evaluacion.fechaTermino }}</li>
+    <li>Estado: {{ o.evaluacion.estado }}</li>
+    <li>Tiempo esperado presentación: {{ o.evaluacion.duracion }}</li>
+    <form action="{% url 'ver_select' o.evaluacion.id %}">
+        <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Rúbrica
+            asociada
+        </button>
+    </form>
+    <button class="w3-button w3-white w3-border w3-border-red w3-round-large">Exportar
+        puntajes
+    </button><br>
+    </p>
+
+    <button class="w3-button w3-large w3-red w3-round">Ver</button>
+    <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
+    <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
+
+
+
+    </div>
+
+
+{% endfor %}
+
+
+
+
+
+
+</div>
+<script>
+    function myFunction(id) {
+        var x = document.getElementById(id);
+        if (x.className.indexOf("w3-show") == -1) {
+            x.className += " w3-show";
+        } else {
+            x.className = x.className.replace(" w3-show", "");
+        }
+    }
+</script>
+
+<script>
+    // Script to open and close sidebar
+    function w3_open() {
+        document.getElementById("mySidebar").style.display = "block";
+        document.getElementById("myOverlay").style.display = "block";
+    }
+
+    function w3_close() {
+        document.getElementById("mySidebar").style.display = "none";
+        document.getElementById("myOverlay").style.display = "none";
+    }
+
+    // Modal Image Gallery
+    function onClick(element) {
+        document.getElementById("img01").src = element.src;
+        document.getElementById("modal01").style.display = "block";
+        var captionText = document.getElementById("caption");
+        captionText.innerHTML = element.alt;
+    }
+</script>
+
+</body>
+
+</html>
