--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
@@ -101,7 +101,12 @@
 
     <button class="w3-button w3-large w3-red w3-round">Ver</button>
     <button class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
-    <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
+
+    <!-- boton de eliminar rubrica-->
+    <form action="{% url 'eliminar_evaluaciones'  o.evaluacion.id %}">
+        <button class="w3-button w3-large w3-red w3-right w3-round">Eliminar</button>
+    </form>
+
 
 
 
