--- a/EvPresentaciones/templates/EvPresentaciones/BASE/base_eval.html
+++ b/EvPresentaciones/templates/EvPresentaciones/BASE/base_eval.html
@@ -25,7 +25,7 @@
     <!--Navigation Links -->
     <div class="w3-bar-block">
       <a href="{% url 'landing_page_eval' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-      <a href="{% url 'evaluacion' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
+      <a href="{% url 'evaluaciones_eval' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
       <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     </div>
   </nav>
