Se unificaron los usuarios de EvPresentaciones y admin. Ahora se ingresa a ambas aplicaciones con email y password. Ademas se completo la gestion de evaluaciones.

--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
@@ -1,5 +1,15 @@
 {% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
+
+    {% if messages %}
+        {% for message in messages %}
+
+            <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                <p><li>{{ message }}</li></p>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <!-- HEADER -->
     <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Evaluadores</b></h1>
@@ -13,27 +23,27 @@
                 {% for evaluador in evaluadores %}
                 <button class="w3-card w3-container w3-hover-shadow"
                     style="max-height:380px;min-height: 317px; max-width: 300px">
-                    <h3>{{ evaluador.nombre }} {{ evaluador.apellido }}</h3><br>
+                    <h3>{{ evaluador.first_name }} {{ evaluador.last_name }}</h3><br>
                     <i class="fas fa-user-alt" style="font-size:100px"></i>
-                    <p>{{ evaluador.correo }}</p>
+                    <p>{{ evaluador.email }}</p>
                 </button>
                 <div class="w3-margin">
 
-                    <form action="{% url 'evaluadores_admin_eliminar' evaluador.correo %}">
+                    <form action="{% url 'evaluadores_admin_eliminar' evaluador.email %}">
                         <button class="w3-button w3-red w3-section w3-padding:10px" type="button"
-                                onclick="document.getElementById('modificar').style.display='block'">
+                                onclick="document.getElementById('modificar{{ evaluador.email }}').style.display='block'">
                                 Modificar</button>
                         <button class="w3-button w3-red w3-section w3-padding:10px" type="submit">Eliminar</button>
                     </form>
                 </div>
 
-                    <div id="modificar" class="w3-modal">
+                    <div id="modificar{{ evaluador.email }}" class="w3-modal">
                             <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
                                 <div class="w3-center"><br>
-                                    <span onclick="document.getElementById('modificar').style.display='none'"
+                                    <span onclick="document.getElementById('modificar{{ evaluador.email }}').style.display='none'"
                                         class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
                                     <form id="form" method="POST" class="w3-container"
-                                        action="{% url 'evaluadores_admin_modificar' evaluador.correo %}">
+                                        action="{% url 'evaluadores_admin_modificar' evaluador.email %}">
                                         {% csrf_token %}
 
                                         <div class="w3-section">
@@ -41,13 +51,13 @@
                                             <label><b>Nombre</b></label>
                                             <input class="w3-input w3-border w3-margin-bottom" type="text"
                                                    placeholder="Ingrese nombre" name="usrname"
-                                                   value="{{ evaluador.nombre }}" required>
+                                                   value="{{ evaluador.first_name }}" required>
                                             <label><b>Apellido</b></label>
                                             <input class="w3-input w3-border" type="text" placeholder="Ingrese apellido"
-                                                   name="apellido" value="{{ evaluador.apellido }}" required>
+                                                   name="apellido" value="{{ evaluador.last_name}}" required>
                                             <label><b>Correo</b></label>
                                             <input class="w3-input w3-border" type="text" placeholder="Ingrese correo"
-                                                   name="correo" value="{{ evaluador.correo }}" required>
+                                                   name="correo" value="{{ evaluador.email }}" required>
                                             <button class="w3-button w3-block w3-red w3-section w3-padding"
                                                 type="submit">Guardar Cambios</button>
 
