Indicado el lugar para hacer requisito 51

--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubricaAdministrador-1.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubricaAdministrador-1.html
@@ -86,6 +86,11 @@
         };
     }
 
+    // Aquí implementar requisito 51!!
+    function validarPuntajes(){
+
+    }
+
     function validarRubrica(){
         var nombre = document.getElementsByName("nombre-rubrica")[0];
         if(nombre.value == ""){
