El administrador puede acceder a la ficha de una evaluacion desde el resumen de las evaluaciones

--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/evaluacion_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/evaluacion_admin.html
@@ -1,4 +1,4 @@
-{% extends 'EvPresentaciones/BASE/base_eval.html' %}
+{% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
 
     <!-- Header
@@ -37,7 +37,7 @@
       <h1 class="w3-xxxlarge w3-text-red"><b>Evaluación <i class="w3-text-green">en curso</i> </b></h1>
       <hr style="width:50px;border:5px solid red" class="w3-round">
       <div class="w3-container w3-center">
-        <p><b>Lambda-Ideas</b> Presentación Tarea 2 <i>CC4401-1/Otoño/2019</i></p>
+        <p><b>Lambda-Ideas</b> Presentación Tarea 2 <i>{{curso}}</i></p>
         <br>
 
         <div class="w3-panel  w3-margin-bottom">
