--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
@@ -99,13 +99,16 @@
         </button><br>
         </p>
 
-        <button class="w3-button w3-large w3-red w3-round">Ver</button>
+        <!-- botones de ver y modificar evaluacion-->
 
+        <form action="{% url 'ficha_evaluacion_admin' o.evaluacion.id %}">
+            <!-- ver evaluacion -->
+            <button class="w3-button w3-large w3-red w3-round" type="submit">Ver</button>
+            <!-- modificar evaluacion -->
+            <button onclick="document.getElementById('modificar_{{ o.evaluacion.id }}').style.display='block'"
+                class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar</button>
+        </form>
 
-        <!-- modificar evaluacion -->
-        <button onclick="document.getElementById('modificar_{{ o.evaluacion.id }}').style.display='block'"
-                class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar
-        </button>
 
 
         <!-- Menu desplegable que aparece al modificar una evaluacion-->
