Reorden de código de rúbricas

--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
@@ -8,7 +8,7 @@
 
     <!-- CONTENT -->
         <div class="w3-container">
-            <form action={% url 'ficha_rubrica_admin' %}>
+            <form action={% url 'ficha_rubrica_crear' %}>
                 <button class="w3-button w3-large w3-red w3-right w3-round">Agregar nueva rúbrica</button>
             </form>
             <br>
