--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/ver_rubrica_detalle.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/ver_rubrica_detalle.html
@@ -75,7 +75,7 @@
                 </head>
 
                 <body>
-                    <form class="form-inline">
+                    <form class="form-inline" style="align: left">
                         <label>Intervalo de presentación: {{ tmin }} - {{ tmax }}</label>
                     </form>
                 </body>
