Cambiado modelo de Rúbricas, añadido paso intermedio a eleiminar (advertencia), casi terminado eliminar

--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
@@ -16,7 +16,7 @@
         <!--Seccion rubricas-->
 
 
-        {% for a in lista %} <!-- Lista contiene (index, nombre, version, archivo)-->
+        {% for a in lista %} <!-- Lista contiene (id, nombre, version, archivo)-->
 
 
 
