--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_eliminar.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_eliminar.html
@@ -2,9 +2,19 @@
 {% block contenido %}
     <!-- HEADER -->
     <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-        <h1 class="w3-xxxlarge w3-text-red"><b>¡Rúbrica eliminada!</b></h1>
+        <h1 class="w3-xxxlarge w3-text-red"><b>Advertencia</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
     </div>
+
+    <h2>Evaluaciones asociadas: </h2>
+    {% for evaluacion in evaluaciones %}
+        <p> {{ evaluacion }} </p>
+    {% endfor %}
+
+    <h2>Cursos asociados: </h2>
+    {% for curso in cursos %}
+        <p> {{ cursos }} </p>
+    {% endfor %}
 
 
 <!-- End page content -->
