Eliminados duplicados en advertencia de eliminaciópn de rúbrica

--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_eliminar.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_eliminar.html
@@ -13,7 +13,7 @@
 
     <h2>Cursos asociados: </h2>
     {% for curso in cursos %}
-        <p> {{ cursos }} </p>
+        <p> {{ curso }} </p>
     {% endfor %}
 
 
